--- a/go_2/go2.docker-compose.yml
+++ b/go_2/go2.docker-compose.yml
@@ -3,7 +3,7 @@ version: "3"
 services:
   go-service-2:
     image: golang:1.9-alpine
-    command: go test test1.go -v
+    command: go test test1.go 
     volumes:
       - .:/go/src/github.com/willyyang/semaphore_test
     working_dir: /go/src/github.com/willyyang/semaphore_test/go2
