--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,3 +18,11 @@ services:
       - .:/go/src/github.com/willyyang/semaphore_test
     working_dir: /go/src/github.com/willyyang/semaphore_test/go
 
+   go-service-2:
+    image: golang:1.9-alpine
+    depends_on:
+      - mongo
+    command: go test test1.go 
+    volumes:
+      - .:/go/src/github.com/willyyang/semaphore_test
+    working_dir: /go/src/github.com/willyyang/semaphore_test/go2
