--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,7 @@ services:
     image: golang:1.9-alpine
     depends_on:
       - mongo
-    command: ls && go test t1_test.go 
+    command: go test -v t1_test.go 
     volumes:
       - .:/go/src/github.com/willyyang/semaphore_test
     working_dir: /go/src/github.com/willyyang/semaphore_test/go_2
