CircleCI first step

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,7 +14,7 @@ services:
     image: golang:1.9-alpine
     depends_on:
       - mongo
-    command: go test -v ./..
+    command: ls 
     volumes:
       - .:/go/src/github.com/willyyang/semaphore_test
     working_dir: /go/src/github.com/willyyang/semaphore_test
