--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,10 +8,8 @@ jobs:
           name: Install Docker Compose
           command: |
             set -x
-            
-            chmod +x /usr/local/bin/docker-compose
             curl -L https://github.com/docker/compose/releases/download/1.11.2/docker-compose-`uname -s`-`uname -m` > /usr/local/bin/docker-compose
-            
+           # chmod +x /usr/local/bin/docker-compose
 workflows:
   version: 2
   build-and-test:
