--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ jobs:
     working_directory: /go/src/github.com/circleci/cci-demo-docker
 
     steps:
-      
+      - checkout
       # This should go into custom primary image, here's only for the sake of explanation
       - run:
           name: Install Docker client
