--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,15 +10,16 @@ jobs:
 
     steps:
       - checkout
-      # This should go into custom primary image, here's only for the sake of explanation
-      - run:
-          name: Install Docker client
-          command: |
-            set -x
-            VER="17.03.0-ce"
-            curl -L -o /tmp/docker-$VER.tgz https://get.docker.com/builds/Linux/x86_64/docker-$VER.tgz
-            tar -xz -C /tmp -f /tmp/docker-$VER.tgz
-            mv /tmp/docker/* /usr/bin
+      # # This should go into custom primary image, here's only for the sake of explanation
+      # - run:
+      #     name: Install Docker client
+      #     command: |
+      #       set -x
+      #       VER="17.03.0-ce"
+      #       curl -L -o /tmp/docker-$VER.tgz https://get.docker.com/builds/Linux/x86_64/docker-$VER.tgz
+      #       tar -xz -C /tmp -f /tmp/docker-$VER.tgz
+      #       mv /tmp/docker/* /usr/bin
+      - setup_remote_docker
       # This should go into custom primary image, here's only for the sake of explanation
       - run:
           name: Install Docker Compose
@@ -32,5 +33,7 @@ jobs:
           command: |
             set -x
             ls -al
+            pwd
+            find *.go
             docker-compose run --rm go-service go test -v t_test.go
   
