--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,9 +2,11 @@ version: 2
 
 jobs:
   build:
-    docker:
-      # using custom image, see .circleci/images/primary/Dockerfile
-      - image: circleci/cci-demo-docker-primary:0.0.2
+    # docker:
+
+    #   # using custom image, see .circleci/images/primary/Dockerfile
+    #   - image: circleci/cci-demo-docker-primary:0.0.2
+    machine: true
 
     working_directory: /go/src/github.com/circleci/cci-demo-docker
 
@@ -35,5 +37,6 @@ jobs:
             ls -al
             pwd
             find *.go
-            docker-compose run --rm go-service go test -v t_test.go
+            # docker-compose run --rm go-service go test -v t_test.go
+            docker-compose run --rm go-service
   
