--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,7 @@ jobs:
             tar -xz -C /tmp -f /tmp/docker-$VER.tgz
             mv /tmp/docker/* /usr/bin
   
-      - setup_remote_docker
+      # - setup_remote_docker
       # This should go into custom primary image, here's only for the sake of explanation
       - run:
           name: Install Docker Compose
