--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ jobs:
     #   - image: circleci/cci-demo-docker-primary:0.0.2
     machine: true
 
-    working_directory: ~/testDir
+    working_directory: ~/testDir  
 
     # working_directory: /go/src/github.com/circleci/cci-demo-docker
 
@@ -16,15 +16,15 @@ jobs:
       - checkout
 
       # # This should go into custom primary image, here's only for the sake of explanation
-      - run:
-          name: Install Docker client
-          command: |
-            set -x
-            sudo rm -rf /usr/bin/docker
-            VER="17.03.0-ce"
-            curl -L -o /tmp/docker-$VER.tgz https://get.docker.com/builds/Linux/x86_64/docker-$VER.tgz
-            tar -xz -C /tmp -f /tmp/docker-$VER.tgz
-            mv /tmp/docker/* /usr/bin
+      # - run:
+      #     name: Install Docker client
+      #     command: |
+      #       set -x
+      #       sudo rm -rf /usr/bin/docker
+      #       VER="17.03.0-ce"
+      #       curl -L -o /tmp/docker-$VER.tgz https://get.docker.com/builds/Linux/x86_64/docker-$VER.tgz
+      #       tar -xz -C /tmp -f /tmp/docker-$VER.tgz
+      #       mv /tmp/docker/* /usr/bin
 
       # - setup_remote_docker
       # This should go into custom primary image, here's only for the sake of explanation
