--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,8 +32,10 @@ jobs:
           name: Install Docker Compose
           command: |
             set -x
-            curl -L https://github.com/docker/compose/releases/download/1.11.2/docker-compose-`uname -s`-`uname -m` > /usr/local/bin/docker-compose
+            sudo -i
+            curl -L https://github.com/docker/compose/releases/download/1.11.2/docker-compose-`uname -s`-`uname -m` > /usr/local/bin/docker-compose            
             chmod +x /usr/local/bin/docker-compose
+            exit
 
       - run:
           name: Start compose
