--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,49 +1,72 @@
 version: 2
 
 jobs:
-  build:
-    # docker:
-
-    #   # using custom image, see .circleci/images/primary/Dockerfile
-    #   - image: circleci/cci-demo-docker-primary:0.0.2
-    machine: true
-
-    working_directory: ~/testDir  
-
-    # working_directory: /go/src/github.com/circleci/cci-demo-docker
-
+  install_compose:
+    docker:
+      - image: circleci/cci-demo-docker-primary:0.0.2
+    working_directory: /go/src/github.com/circleci/cci-demo-docker
+   
     steps:
-      - checkout
-
-      # # This should go into custom primary image, here's only for the sake of explanation
-      # - run:
-      #     name: Install Docker client
-      #     command: |
-      #       set -x
-      #       sudo rm -rf /usr/bin/docker
-      #       VER="17.03.0-ce"
-      #       curl -L -o /tmp/docker-$VER.tgz https://get.docker.com/builds/Linux/x86_64/docker-$VER.tgz
-      #       tar -xz -C /tmp -f /tmp/docker-$VER.tgz
-      #       mv /tmp/docker/* /usr/bin
-
-      # - setup_remote_docker
-      # This should go into custom primary image, here's only for the sake of explanation
       - run:
           name: Install Docker Compose
           command: |
             set -x
-            sudo -i
             curl -L https://github.com/docker/compose/releases/download/1.11.2/docker-compose-`uname -s`-`uname -m` > /usr/local/bin/docker-compose            
             chmod +x /usr/local/bin/docker-compose
-            exit
+            
 
+
+  test_1:
+    machine: true
+    working_directory: ~/testDir  
+    steps:
+      - checkout
       - run:
-          name: Start compose
+          name: Run test 1
           command: |
             set -x
             ls -al
             pwd
             find *.go
-            # docker-compose run --rm go-service go test -v t_test.go
-            docker-compose run --rm go-service
+            docker-compose run --rm go-service go test -v t_test.go
+
+  test_2:
+    machine: true
+    working_directory: ~/testDir
+    steps:
+      - checkout
+      - run:
+          name: Run test 2
+          command: |
+            set -x
+            ls -al
+            docker-compose run --rm go-service go test -v t_test.go
   
+  after_test:
+    docker:
+      - image: circleci/cci-demo-docker-primary:0.0.2
+    working_directory: /go/src/github.com/circleci/cci-demo-docker
+   
+    steps:
+      - run:
+          name: Check
+          command: |
+            set -x
+            ls -al
+  
+workflows:
+  version: 2
+  run_things:
+    jobs:
+      - install_compose
+      - test_1:
+          requires:
+            - install_compose
+      - test_2:
+          requires:
+            - install_compose
+      - after_test:
+          requires:
+            - test_1
+            - test_2
+
