--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,8 +13,6 @@ jobs:
             set -x
             curl -L https://github.com/docker/compose/releases/download/1.11.2/docker-compose-`uname -s`-`uname -m` > /usr/local/bin/docker-compose            
             chmod +x /usr/local/bin/docker-compose
-            
-
 
   test_1:
     machine: true
@@ -25,9 +23,6 @@ jobs:
           name: Run test 1
           command: |
             set -x
-            ls -al
-            pwd
-            find *.go
             docker-compose run --rm go-service go test -v t_test.go
 
   test_2:
@@ -39,8 +34,18 @@ jobs:
           name: Run test 2
           command: |
             set -x
-            ls -al
-            docker-compose run --rm go-service go test -v t_test.go
+            docker-compose run --rm go-service-2 go test -v t1_test.go
+
+  test_fail:
+    machine: true
+    working_directory: ~/testDir
+    steps:
+      - checkout
+      - run:
+          name: Run test 2
+          command: |
+            set -x
+            docker-compose run --rm go-service go test -v fail_test.go
   
   after_test:
     docker:
@@ -63,6 +68,9 @@ workflows:
           requires:
             - install_compose
       - test_2:
+          requires:
+            - install_compose
+      - test_fail:
           requires:
             - install_compose
       - after_test:
